tests/errors/sem_array1.java
public class sem_array1 {
public static void main(String[] args){
int[] values;
int i = values[ "UyaMcVU" ];
}
}